# Sistema-Gestion-Backend

./: .env.example  Dockerfile  pyproject.toml  requirements.txt
config/: settings.py
usuarios/templates/: factura_pdf.html
