[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Felipe Príncipe", "Brandon Gómez", "Jhon Herrera", "Max Ventocilla"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.6.0"
djangorestframework-simplejwt = "^5.3.1"
weasyprint = "^63.0"
xhtml2pdf = "^0.2.16"
reportlab = "^4.2.5"
setuptools = "^75.6.0"
tzdata = "^2024.2"
psycopg2-binary = "^2.9.10"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
